syntax = "proto3";

import "db_task.proto";

option go_package = "./;db";

message DBClusterResponseStatus {
    int32 code = 1;
    string message = 2;
}

message DBClusterDTO {
    string id = 1;
    string code = 2;
    string name = 3;
    string tenantId = 4;
    string dbPassword = 5;
    string clusterType = 6;
    string versionCode = 7;
    int32 status = 8;
    string tags = 9;
    bool tls = 10;
    string demands = 11;
    int32 workFlowId = 12;
    string ownerId = 13;
    int64 createTime = 14;
    int64 updateTime = 15;
    int64 deleteTime = 16;
}

message DBTiUPConfigDTO {
    int32 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    string content = 4;
    int64 createTime = 5;
}

message DBCreateClusterRequest {
    DBClusterDTO cluster = 1;
}

message DBCreateClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBLoadClusterRequest {
    string clusterId = 1;
}

message DBLoadClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDetailDTO clusterDetail = 2;
}

message DBClusterDisplayDTO {
    DBClusterDTO cluster = 1;
    DBFlowDTO flow = 2;
}

message DBClusterDetailDTO {
    DBClusterDTO cluster = 1;
    DBTiUPConfigDTO tiupConfigRecord = 2;
    DBFlowDTO flow = 3;
}

message DBListClusterRequest {

}

message DBListClusterResponse {
    DBClusterResponseStatus status = 1;
    repeated DBClusterDisplayDTO clusters = 2;
    DBPageDTO page = 3;
}

message DBDeleteClusterRequest {
    string clusterId = 1;
}

message DBDeleteClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateClusterStatusRequest {
    string clusterId = 1;
    int32 status = 2;
    bool updateStatus = 3;
    int64 flowId = 4;
    bool updateFlow = 5;
}

message DBUpdateClusterStatusResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateTiupConfigRequest {
    string clusterId = 1;
    string content = 2;
    string tenantId = 3;
}

message DBUpdateTiupConfigResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
    DBTiUPConfigDTO tiupConfigRecord = 3;
}

message DBPageDTO {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
}
